Created unresponsive hero section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-    
+
     <title>Sidas Vandenidas</title>
 </head>
 <body>
@@ -32,5 +32,17 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Hero -->
+    <section class="hero">
+        <div class="hero-wrapper">
+            <h2>Sidas Vandenidas</h2>
+            <h3>
+                Sidas Vandenidas - visada Jusu paslaugoms. Su juo atrasite<br/>
+                ikvepima ir vidine ramybe.
+            </h3>
+            <button>Susisiekti</button>
+        </div>
+    </section>
 </body>
 </html>
