--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="lt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Puslapis apie Sida Vandenida.">
+    <meta name="description" content="The real Sid the Sloth.">
     <meta name="robots" content="index, follow">
 
     <!-- Icon & Stylesheet -->
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>Sidas Vandenidas</title>
+    <title>Sid the Sloth</title>
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -25,10 +25,10 @@
                 <img src="./images/icon.webp" alt="Tikras Sidas Vandenidas" id="logo">
             </div>
             <ul>
-                <li><a href="#">Pradzia</a></li>
-                <li><a href="#">Apie</a></li>
-                <li><a href="#">Mintys</a></li>
-                <li><a href="#">Kontaktai</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about-section">About</a></li>
+                <li><a href="#">Quotes</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -36,13 +36,29 @@
     <!-- Hero -->
     <section class="hero">
         <div class="hero-wrapper">
-            <h2>Sidas Vandenidas</h2>
+            <h2>Sid the Sloth</h2>
             <h3>
-                Sidas Vandenidas - visada Jusu paslaugoms. Su juo atrasite<br/>
-                ikvepima ir vidine ramybe.
+                Sid the Sloth is amazing. He is inspirational and<br/>
+                extremely wise.
             </h3>
-            <button>Susisiekti</button>
+            <button>Read more</button>
         </div>
     </section>
+
+    <!-- About Sid the Sloth -->
+     <section id="about-section">
+        <img id="sun" src="./images/sun-transparent.png" alt="">
+
+        <div id="about-wrapper">
+            <h2>Welcome to my website!</h2>
+            <p>
+                I hope that you get inspired from reading the quotes</br>
+                that I came up with. 
+            </p>
+            <button id="quotes-btn">Scroll to quotes</button>
+        </div>
+
+        <img id="sid" src="./images/sid-transparent.png" alt="">
+     </section>
 </body>
 </html>
